[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Vehicles.gd" type="Script" id=1]
[ext_resource path="res://assets/styleBox/orangeBox.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/images/Train.png" type="Texture" id=3]
[ext_resource path="res://assets/images/runBlack.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Plane.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[node name="Vehicles" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 270.0
margin_bottom = 480.0
custom_styles/panelf = ExtResource( 2 )
custom_styles/panel = ExtResource( 2 )

[node name="Train" type="Sprite" parent="."]
visible = false
position = Vector2( 131.687, 241.127 )
scale = Vector2( 0.373229, 0.373229 )
texture = ExtResource( 3 )

[node name="Walk" type="Sprite" parent="."]
position = Vector2( 137.079, 246.066 )
scale = Vector2( 0.267893, 0.267893 )
texture = ExtResource( 4 )

[node name="Plane" type="Sprite" parent="."]
visible = false
position = Vector2( 141.663, 255.769 )
rotation = -0.404916
scale = Vector2( 0.506217, 0.506217 )
texture = ExtResource( 5 )

[node name="PlaneLabel" type="Label" parent="."]
visible = false
margin_left = 63.651
margin_top = 38.7593
margin_right = 214.651
margin_bottom = 117.759
custom_fonts/font = SubResource( 1 )
text = "PLANE"

[node name="TrainLabel" type="Label" parent="."]
visible = false
margin_left = 63.651
margin_top = 38.7593
margin_right = 214.651
margin_bottom = 117.759
custom_fonts/font = SubResource( 1 )
text = "TRAIN"

[node name="WalkLabel" type="Label" parent="."]
margin_left = 57.4994
margin_top = 44.911
margin_right = 208.499
margin_bottom = 123.911
custom_fonts/font = SubResource( 1 )
text = "RUN"
align = 1

[node name="pickButton" type="Button" parent="."]
margin_left = 51.3403
margin_top = 378.024
margin_right = 215.34
margin_bottom = 428.024
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "PICK"
[connection signal="pressed" from="pickButton" to="." method="_on_pickButton_pressed"]
